namespace AcademicEvents.Domain.Enums;

public enum TipoAtividade
{
    Abertura,
    Palestra,
    Workshop,
    MesaRedonda,
    CoffeBreak,
    Encerramento,
    SessaoTecnica,
    Outro
}