namespace AcademicEvents.Domain.Enums;

/// <summary>
/// Tipos de reação que um usuário pode dar a um evento.
/// Cada usuário só pode ter uma reação por evento.
/// </summary>
public enum TipoReacao
{
    Curtir,
    Adorei,
    Interessante,
    VouParticipar
}
