@startuml c4_nivel4_codigo

' nível 4 do C4: diagrama de classes do domínio
' mostra as entidades, enums e relacionamentos do AcademicEvents.Domain

title [Nível 4] Classes do Domínio - AcademicEvents.Domain

skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #EEF4FF
  BorderColor #3B5CA8
  HeaderBackgroundColor #3B5CA8
  HeaderFontColor #FFFFFF
  ArrowColor #2C3E7A
}
skinparam enum {
  BackgroundColor #FFF8EE
  BorderColor #D4943A
  HeaderBackgroundColor #F5A623
  HeaderFontColor #FFFFFF
}

' entidades do domínio
class User {
  + Id : int
  + Nome : string
  + Email : string
  + SenhaHash : string
  + CriadoEm : DateTime
  --
  + EventosOrganizados : List<Event>
  + Inscricoes : List<Registration>
  + Comentarios : List<Comment>
  + Reacoes : List<Reaction>
}

class Event {
  + Id : int
  + Titulo : string
  + Descricao : string
  + DataInicio : DateTime
  + DataFim : DateTime
  + Local : string
  + Status : StatusEvento
  + OrganizadorId : int
  + CriadoEm : DateTime
  --
  + Organizador : User?
  + Inscricoes : List<Registration>
  + Comentarios : List<Comment>
  + Reacoes : List<Reaction>
  + Atividades: List<Activity>
}

class Activity {
  + Id : int
  + Titulo : string
  + Descricao : string
  + Tipo: TipoAtividade
  + DataInicio : DateTime
  + DataFim : DateTime
  + Local : string
  + EventId : int
  --
  + Event : Event?
}

class Registration {
  + Id : int
  + UsuarioId : int
  + EventoId : int
  + Status : StatusInscricao
  + CriadoEm : DateTime
  --
  + Usuario : User?
  + Evento : Event?
}

class Comment {
  + Id : int
  + UsuarioId : int
  + EventoId : int
  + Conteudo : string
  + CriadoEm : DateTime
  --
  + Usuario : User?
  + Evento : Event?
}

class Reaction {
  + Id : int
  + UsuarioId : int
  + EventoId : int
  + Tipo : TipoReacao
  + CriadoEm : DateTime
  --
  + Usuario : User?
  + Evento : Event?
}

' enums do domínio
enum StatusEvento {
  Rascunho
  Publicado
  Cancelado
  Concluido
}

enum StatusInscricao {
  Pendente
  Confirmada
  Cancelada
}

enum TipoReacao {
  Curtir
  Adorei
  Interessante
  VouParticipar
}

enum TipoAtividade {
    Abertura
    Palestra
    Workshop
    MesaRedonda
    CoffeBreak
    Encerramento
    SessaoTecnica
    Outro
}

' relacionamentos entre as entidades
User "1" --> "0..*" Event : organiza
User "1" --> "0..*" Registration : realiza
User "1" --> "0..*" Comment : escreve
User "1" --> "0..*" Reaction : faz

Event "1" --> "0..*" Registration : recebe
Event "1" --> "0..*" Comment : tem
Event "1" --> "0..*" Reaction : recebe
Event "1" --> "0..*" Activity : tem

' entidades que usam os enums
Event ..> StatusEvento
Registration ..> StatusInscricao
Reaction ..> TipoReacao
Activity ..> TipoAtividade

@enduml
